--- a/calculator_cli_deploy_npm/package.json
+++ b/calculator_cli_deploy_npm/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "type": "module"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/chalk-animation": "^1.6.1",
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.9"
   },
   "dependencies": {
+    "chalk": "^5.1.2",
+    "chalk-animation": "^2.0.3",
     "inquirer": "^9.1.4"
   }
 }
