deployment on npm

--- a/calculator_cli_deploy_npm/package.json
+++ b/calculator_cli_deploy_npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator_cli_deploy_npm",
+  "name": "sameer-calculator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
