--- a/calculator_cli_deploy_npm/package.json
+++ b/calculator_cli_deploy_npm/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "abdullah-calculator",
-  "version": "1.1.0",
+  "name": "abdullah5",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "bin": "index.js",
+  "bin": {
+    "abdullah5": "bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
