--- a/number_guessing_game/package.json
+++ b/number_guessing_game/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "number_guessing_game",
-  "version": "1.0.0",
+  "name": "abdullah_guessing_game",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
