--- a/number_guessing_game/package.json
+++ b/number_guessing_game/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abdullah_guess",
+  "name": "abdullah_number_guess",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
